--- a/Codes/html_codes/about.html
+++ b/Codes/html_codes/about.html
@@ -10,7 +10,7 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/Codes/CSS CODES/styles.css" />
+    <link rel="stylesheet" href="/Codes/css_codes/styles.css" />
   </head>
   <body>
     <header>
@@ -20,14 +20,15 @@
       </div>
       <nav>
         <ul>
-          <li><a href="/Codes/HTML CODES/index.html">Home</a></li>
-          <li><a href="/Codes/HTML CODES/about.html">About</a></li>
-          <li><a href="/Codes/HTML CODES/services.html">Services</a></li>
-          <li><a href="/Codes/HTML CODES/contact.html">Contact</a></li>
+          <li><a href="/Codes/html_codes/index.html">Home</a></li>
+          <li><a href="/Codes/html_codes/about.html">About</a></li>
+          <li><a href="/Codes/html_codes/services.html">Services</a></li>
+          <li><a href="/Codes/html_codes/contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
-    <h1>SERVICE PAGE</h1>
+    <h1>ABOUT PAGE</h1>
+    <a href=""></a>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
