--- a/Codes/html_codes/contact.html
+++ b/Codes/html_codes/contact.html
@@ -10,7 +10,7 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/Codes/CSS CODES/styles.css" />
+    <link rel="stylesheet" href="/Codes/css_codes/styles.css" />
   </head>
   <body>
     <header>
@@ -20,10 +20,10 @@
       </div>
       <nav>
         <ul>
-          <li><a href="/Codes/HTML CODES/index.html">Home</a></li>
-          <li><a href="/Codes/HTML CODES/about.html">About</a></li>
-          <li><a href="/Codes/HTML CODES/services.html">Services</a></li>
-          <li><a href="/Codes/HTML CODES/contact.html">Contact</a></li>
+          <li><a href="/Codes/html_codes/index.html">Home</a></li>
+          <li><a href="/Codes/html_codes/about.html">About</a></li>
+          <li><a href="/Codes/html_codes/services.html">Services</a></li>
+          <li><a href="/Codes/html_codes/contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
