--- a/Codes/html_codes/index.html
+++ b/Codes/html_codes/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/Codes/CSS CODES/styles.css" />
+    <link rel="stylesheet" href="/Codes/css_codes/styles.css" />
   </head>
   <body>
     <header>
@@ -21,10 +21,10 @@
       </div>
       <nav>
         <ul>
-          <li><a href="/Codes/HTML CODES/index.html">Home</a></li>
-          <li><a href="/Codes/HTML CODES/about.html">About</a></li>
-          <li><a href="/Codes/HTML CODES/services.html">Services</a></li>
-          <li><a href="/Codes/HTML CODES/contact.html">Contact</a></li>
+          <li><a href="/Codes/html_codes/index.html">Home</a></li>
+          <li><a href="/Codes/html_codes/about.html">About</a></li>
+          <li><a href="/Codes/html_codes/services.html">Services</a></li>
+          <li><a href="/Codes/html_codes/contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -34,13 +34,13 @@
     </div>
     <img
       class="Index-image"
-      src="/Codes/IMAGES/Index image.png"
+      src="/Codes/images/Index image.png"
       alt="illustration of roadmap"
     />
-    <a href="/Codes/HTML CODES/roles.html">
+    <a href="/Codes/html_codes/roles.html">
       <button class="styled-button-roles">ROLES</button>
     </a>
-    <a href="/Codes/HTML CODES/skills.html">
+    <a href="/Codes/html_codes/skills.html">
       <button class="styled-button-skills">SKILLS</button>
     </a>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
