--- a/Codes/html_codes/roles.html
+++ b/Codes/html_codes/roles.html
@@ -10,7 +10,7 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/Codes/CSS CODES/styles.css" />
+    <link rel="stylesheet" href="/Codes/css_codes/styles.css" />
   </head>
   <body>
     <header>
@@ -20,10 +20,10 @@
       </div>
       <nav>
         <ul>
-          <li><a href="/Codes/HTML CODES/index.html">Home</a></li>
-          <li><a href="/Codes/HTML CODES/about.html">About</a></li>
-          <li><a href="/Codes/HTML CODES/services.html">Services</a></li>
-          <li><a href="/Codes/HTML CODES/contact.html">Contact</a></li>
+          <li><a href="/Codes/html_codes/index.html">Home</a></li>
+          <li><a href="/Codes/html_codes/about.html">About</a></li>
+          <li><a href="/Codes/html_codes/services.html">Services</a></li>
+          <li><a href="/Codes/html_codes/contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -33,7 +33,7 @@
     </br>
     <div class="card-grid">
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="/Codes/IMAGES/mobile app (3).png" alt="Card image cap">
+          <img class="card-img-top" src="/Codes/images/mobile app (3).png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Android Developer</h5>
             <p class="card-text">Designs and builds mobile applications for devices running the Android operating system..</p>
@@ -41,7 +41,7 @@
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="/Codes/IMAGES/feeling pround.png" alt="Card image cap">
+          <img class="card-img-top" src="/Codes/images/feeling pround.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">ASP.NET Core Developer</h5>
             <p class="card-text">Creates web applications using the ASP.NET Core framework, focusing on modern, scalable, and high-performance solutions.</p>
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="/Codes/IMAGES/backend-developer.jpeg" alt="Card image cap">
+          <img class="card-img-top" src="/Codes/images/backend-developer.jpeg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Backend Developer</h5>
             <p class="card-text">Designs, implements, and maintains the server-side logic, databases, and APIs that power web and mobile applications.</p>
@@ -57,7 +57,7 @@
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="/Codes/IMAGES/blockchain.png" alt="Card image cap">
+          <img class="card-img-top" src="/Codes/images/blockchain.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Blockchain Developer</h5>
             <p class="card-text">Designs and develops decentralized applications and smart contracts utilizing blockchain technology for secure and transparent transactions and data management.</p>
@@ -65,7 +65,7 @@
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="/Codes/IMAGES/devops.jpeg" alt="Card image cap">
+          <img class="card-img-top" src="/Codes/images/devops.jpeg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">DevOps</h5>
             <p class="card-text">Facilitates seamless collaboration between development and operations teams, automating and streamlining the software development lifecycle.</p>
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="/Codes/IMAGES/frontend_developer.jpg" alt="Card image cap">
+          <img class="card-img-top" src="/Codes/images/frontend_developer.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Frontend Developer</h5>
             <p class="card-text">Designs and creates the user interface and interactive features of websites or application</p>
@@ -81,7 +81,7 @@
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="/Codes/IMAGES/fullstackdev.png" alt="Card image cap">
+          <img class="card-img-top" src="/Codes/images/fullstackdev.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Full Stack Developer</h5>
             <p class="card-text">Handles both frontend and backend development, responsible for creating and maintaining all aspects of a software application or system</p>
@@ -89,7 +89,7 @@
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="/Codes/IMAGES/QAanalyst.jpeg" alt="Card image cap">
+          <img class="card-img-top" src="/Codes/images/QAanalyst.jpeg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">QA Analyst</h5>
             <p class="card-text">Ensures software quality by testing and identifying defects, ensuring a reliable and smooth user experience.</p>
@@ -97,7 +97,7 @@
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="/Codes/IMAGES/react_js.png" alt="Card image cap">
+          <img class="card-img-top" src="/Codes/images/react_js.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">React Native Developer</h5>
             <p class="card-text">Builds cross-platform mobile applications using the React Native framework.</p>
@@ -105,7 +105,7 @@
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="/Codes/IMAGES/Securityengineer.jpeg" alt="Card image cap">
+          <img class="card-img-top" src="/Codes/images/Securityengineer.jpeg" alt="Card image cap">
           <div class="card-body">
               <h5 class="card-title">Security Engineer</h5>
               <p class="card-text">Designs and implements measures to protect systems, networks, and data from cyber threats and vulnerabilities.</p>
@@ -113,7 +113,7 @@
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="/Codes/IMAGES/Software_architect.jpeg" alt="Card image cap">
+          <img class="card-img-top" src="/Codes/images/Software_architect.jpeg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Software Architect</h5>
             <p class="card-text">Designs and plans the overall structure and functionality of a software system.</p>
@@ -121,7 +121,7 @@
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="/Codes/IMAGES/UX_designer.png" alt="Card image cap">
+          <img class="card-img-top" src="/Codes/images/UX_designer.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">UX Designer</h5>
             <p class="card-text">UX designer crafts intuitive and engaging user experiences for digital products.</p>
