Updated ASP.netcore Developer

--- a/Codes/html_codes/frontend_developer.html
+++ b/Codes/html_codes/frontend_developer.html
@@ -11,8 +11,7 @@
       crossorigin="anonymous"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/Codes/css_codes/styles.css" />
-    <link rel="stylesheet" href="/Codes/css_codes/frontend_developer.css" />
+    <link rel="stylesheet" href="/Codes/css_codes/styles.css">
   </head>
   <body>
     <header>
