--- a/Codes/html_codes/roles.html
+++ b/Codes/html_codes/roles.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/Codes/css_codes/styles.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <header>
@@ -27,12 +28,12 @@
         </ul>
       </nav>
     </header>
-    </body>
-    </br>
+   
+    <br>
     <div class="roles-h1">ROLES</div>
-    </br>
+    <br>
     <div class="card-grid">
-        <div class="card" style="width: 18rem;">
+        <div class="card" data-aos="zoom-in" style="width: 18rem;">
           <img class="card-img-top" src="/Codes/images/mobile app (3).png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Android Developer</h5>
@@ -40,7 +41,7 @@
             <a href="#" class="btn btn-primary">View Roadmap</a>
           </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card" data-aos="zoom-in" style="width: 18rem;">
           <img class="card-img-top" src="/Codes/images/feeling pround.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">ASP.NET Core Developer</h5>
@@ -48,7 +49,7 @@
             <a href="/Codes/html_codes/aspnet_core_developer.html" class="btn btn-primary">View Roadmap</a>
           </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card" data-aos="zoom-in" style="width: 18rem;">
           <img class="card-img-top" src="/Codes/images/backend-developer.jpeg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Backend Developer</h5>
@@ -56,7 +57,7 @@
             <a href="/Codes/html_codes/backend_developer.html" class="btn btn-primary">View Roadmap</a>
           </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card" data-aos="zoom-in" style="width: 18rem;">
           <img class="card-img-top" src="/Codes/images/blockchain.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Blockchain Developer</h5>
@@ -64,7 +65,7 @@
             <a href="#" class="btn btn-primary">View Roadmap</a>
           </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card" data-aos="zoom-in" style="width: 18rem;">
           <img class="card-img-top" src="/Codes/images/devops.jpeg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">DevOps</h5>
@@ -72,7 +73,7 @@
             <a href="#" class="btn btn-primary">View Roadmap</a>
           </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card" data-aos="zoom-in" style="width: 18rem;">
           <img class="card-img-top" src="/Codes/images/frontend_developer.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Frontend Developer</h5>
@@ -80,7 +81,7 @@
             <a href="/Codes/html_codes/frontend_developer.html" class="btn btn-primary">View Roadmap</a>
           </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card" data-aos="zoom-in" style="width: 18rem;">
           <img class="card-img-top" src="/Codes/images/fullstackdev.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Full Stack Developer</h5>
@@ -88,7 +89,7 @@
             <a href="#" class="btn btn-primary">View Roadmap</a>
           </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card" data-aos="zoom-in" style="width: 18rem;">
           <img class="card-img-top" src="/Codes/images/QAanalyst.jpeg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">QA Analyst</h5>
@@ -96,7 +97,7 @@
             <a href="#" class="btn btn-primary">View Roadmap</a>
           </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card" data-aos="zoom-in" style="width: 18rem;">
           <img class="card-img-top" src="/Codes/images/react_js.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">React Native Developer</h5>
@@ -104,7 +105,7 @@
             <a href="#" class="btn btn-primary">View Roadmap</a>
           </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card" data-aos="zoom-in" style="width: 18rem;">
           <img class="card-img-top" src="/Codes/images/Securityengineer.jpeg" alt="Card image cap">
           <div class="card-body">
               <h5 class="card-title">Security Engineer</h5>
@@ -112,7 +113,7 @@
               <a href="#" class="btn btn-primary">View Roadmap</a>
           </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card" data-aos="zoom-in" style="width: 18rem;">
           <img class="card-img-top" src="/Codes/images/Software_architect.jpeg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Software Architect</h5>
@@ -120,7 +121,7 @@
             <a href="#" class="btn btn-primary">View Roadmap</a>
           </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card" data-aos="zoom-in" style="width: 18rem;">
           <img class="card-img-top" src="/Codes/images/UX_designer.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">UX Designer</h5>
@@ -144,5 +145,9 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
