--- a/Codes/html_codes/index.html
+++ b/Codes/html_codes/index.html
@@ -17,7 +17,7 @@
     <header>
       <div class="logo">
         <img src="logo.png" alt="P" />
-        <span class="logo-text">PathPlanPro</span>
+        <span class="logo-text">CareerMapPro</span>
       </div>
       <nav>
         <ul>
@@ -28,36 +28,38 @@
         </ul>
       </nav>
     </header>
-    <div class="index-box">
-      Welcome to PathPlanPro , a website which guides users to acheive their
-      goal by providing them with roadmaps.
-    </div>
-    <img
-      class="Index-image"
-      src="/Codes/images/Index image.png"
-      alt="illustration of roadmap"
-    />
-    <a href="/Codes/html_codes/roles.html">
-      <button class="styled-button-roles">ROLES</button>
-    </a>
-    <a href="/Codes/html_codes/skills.html">
-      <button class="styled-button-skills">SKILLS</button>
-    </a>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
-      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-      crossorigin="anonymous"
-    ></script>
+    <section>
+      <div class="index-box">
+        Welcome to CareerMapPro , a website which guides users to acheive their
+        goal by providing them with roadmaps.
+      </div>
+      <img
+        class="Index-image"
+        src="/Codes/images/Index image.png"
+        alt="illustration of roadmap"
+      />
+      <a href="/Codes/html_codes/roles.html">
+        <button class="styled-button-roles">ROLES</button>
+      </a>
+      <a href="/Codes/html_codes/skills.html">
+        <button class="styled-button-skills">SKILLS</button>
+      </a>
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script
+        src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"
+      ></script>
+    </section>
   </body>
 </html>
