minor aesthetic changes

--- a/Codes/html_codes/aspnet_core_developer.html
+++ b/Codes/html_codes/aspnet_core_developer.html
@@ -1627,7 +1627,7 @@
         font-weight="normal"
         font-size="32px"
       >
-        <tspan>ASP.NET Core</tspan>
+        <tspan>ASP.NET Core Developer</tspan>
       </text>
       <path
         d="M933.3396560000001 198.539464Q905.1602471509144 241.88640273491268 933.3396560000001 290.247696"
