added fullstack_developer role

--- a/Codes/html_codes/roles.html
+++ b/Codes/html_codes/roles.html
@@ -86,7 +86,7 @@
           <div class="card-body">
             <h5 class="card-title">Full Stack Developer</h5>
             <p class="card-text">Handles both frontend and backend development, responsible for creating and maintaining all aspects of a software application or system</p>
-            <a href="#" class="btn btn-primary">View Roadmap</a>
+            <a href="/Codes/html_codes/fullstack_developer.html" class="btn btn-primary">View Roadmap</a>
           </div>
         </div>
         <div class="card" data-aos="zoom-in" style="width: 18rem;">
