added devops role

--- a/Codes/html_codes/roles.html
+++ b/Codes/html_codes/roles.html
@@ -70,7 +70,7 @@
           <div class="card-body">
             <h5 class="card-title">DevOps</h5>
             <p class="card-text">Facilitates seamless collaboration between development and operations teams, automating and streamlining the software development lifecycle.</p>
-            <a href="#" class="btn btn-primary">View Roadmap</a>
+            <a href="/Codes/html_codes/devops.html" class="btn btn-primary">View Roadmap</a>
           </div>
         </div>
         <div class="card" data-aos="zoom-in" style="width: 18rem;">
