--- a/Codes/html_codes/skills.html
+++ b/Codes/html_codes/skills.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/Codes/css_codes/styles.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <header>
@@ -31,7 +32,7 @@
     <div class="skills-h1">SKILLS</div>
     <br/>
     <div class="card-grid">
-      <div class="card" style="width: 18rem;">
+      <div class="card" data-aos="zoom-in" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/images/Angular.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Angular</h5>
@@ -39,7 +40,7 @@
           <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card" data-aos="zoom-in" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/images/Design Systems.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Design Systems</h5>
@@ -47,7 +48,7 @@
           <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card" data-aos="zoom-in" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/images/Javascript.jpeg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">JavaScript</h5>
@@ -55,7 +56,7 @@
           <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card" data-aos="zoom-in" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/images/kubernetes.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Kubernetes</h5>
@@ -63,7 +64,7 @@
           <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card" data-aos="zoom-in" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/images/MongoDB.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Mongo DB</h5>
@@ -71,7 +72,7 @@
           <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card" data-aos="zoom-in" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/images/nodejs.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Node.js</h5>
@@ -79,7 +80,7 @@
           <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card" data-aos="zoom-in" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/images/prpompt_engineering.jpeg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Prompt Engineering</h5>
@@ -87,7 +88,7 @@
           <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card" data-aos="zoom-in" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/images/python.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Python</h5>
@@ -95,7 +96,7 @@
           <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card" data-aos="zoom-in" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/images/react_js.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">React.js</h5>
@@ -103,7 +104,7 @@
           <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card" data-aos="zoom-in" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/images/SQL.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">SQL</h5>
@@ -111,7 +112,7 @@
           <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card"data-aos="zoom-in" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/images/Typescript.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">TypeScript</h5>
@@ -119,7 +120,7 @@
           <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+      <div class="card" data-aos="zoom-in" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/images/vue.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Vue.js</h5>
@@ -142,5 +143,9 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
