added python skill

--- a/Codes/html_codes/index.html
+++ b/Codes/html_codes/index.html
@@ -30,7 +30,7 @@
     </header>
     <section>
       <div class="index-box">
-        Welcome to CareerMapPro , a website which guides users to acheive their
+        Welcome to CareerMapPro , a website which guides users to achieve their
         goal by providing them with roadmaps.
       </div>
       <img
