--- a/Codes/html_codes/skills.html
+++ b/Codes/html_codes/skills.html
@@ -93,7 +93,7 @@
         <div class="card-body">
           <h5 class="card-title">Python</h5>
           <p class="card-text"> High-level, versatile programming language known for its readability and extensive libraries.</p>
-          <a href="#" class="btn btn-primary">View Roadmap</a>
+          <a href="/Codes/html_codes/python.html" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" data-aos="zoom-in" style="width: 18rem;">
