major changes in the frontend roadmap

--- a/Codes/html_codes/frontend_developer.html
+++ b/Codes/html_codes/frontend_developer.html
@@ -287,17 +287,6 @@
         stroke-linejoin="round"
         stroke-dasharray="undefined"
       ></path>
-      <rect
-        x="763.35"
-        y="2000.35"
-        width="416.3"
-        height="124.3"
-        rx="2"
-        fill="rgb(255,255,255)"
-        fill-opacity="1"
-        stroke="rgb(0,0,0)"
-        stroke-width="2.7"
-      ></rect>
       <path
         d="M1273.2273534620772 2023.789630896995Q1273.3508778332066 1994.1254002230826 1273.2273534620772 1963.668898150562"
         fill="none"
@@ -352,91 +341,6 @@
         stroke-linejoin="round"
         stroke-dasharray="undefined"
       ></path>
-      <g>
-        <rect
-          x="203.35"
-          y="1107.35"
-          width="557.3"
-          height="193.3"
-          rx="2"
-          fill="rgb(255,255,255)"
-          fill-opacity="1"
-          stroke="rgb(0,0,0)"
-          stroke-width="2.7"
-        ></rect>
-        <text
-          x="230"
-          y="1148"
-          fill="rgb(0,0,0)"
-          font-style="normal"
-          font-weight="normal"
-          font-size="18px"
-        >
-          <tspan>
-            We have trimmed down the CSS part for the sake of brevity.
-          </tspan>
-        </text>
-        <text
-          x="230"
-          y="1179"
-          fill="rgb(0,0,0)"
-          font-style="normal"
-          font-weight="normal"
-          font-size="18px"
-        >
-          <tspan>However, I would recommend reading about</tspan>
-          <tspan fill="#9900ff">CSS in JS</tspan>
-          <tspan>,</tspan>
-        </text>
-        <text
-          x="230"
-          y="1210"
-          fill="rgb(0,0,0)"
-          font-style="normal"
-          font-weight="normal"
-          font-size="18px"
-        >
-          <tspan></tspan>
-          <tspan fill="#9900ff">CSS Modules</tspan>
-          <tspan>,</tspan>
-          <tspan fill="#9900ff">Styled Components</tspan>
-          <tspan>,</tspan>
-          <tspan fill="#9900ff">Vanilla Extract</tspan>
-          <tspan>,</tspan>
-          <tspan fill="#9900ff">Panda CSS</tspan>
-          <tspan></tspan>
-        </text>
-        <text
-          x="229"
-          y="1240.5"
-          fill="rgb(0,0,0)"
-          font-style="normal"
-          font-weight="normal"
-          font-size="18px"
-        >
-          <tspan>
-            and look into different frameworks with pre-built components
-          </tspan>
-        </text>
-        <text
-          x="229"
-          y="1272"
-          fill="rgb(0,0,0)"
-          font-style="normal"
-          font-weight="normal"
-          font-size="18px"
-        >
-          <tspan>such as</tspan>
-          <tspan fill="#2b78e4">MUI</tspan>
-          <tspan>,</tspan>
-          <tspan fill="#9900ff">daisyUI</tspan>
-          <tspan>,</tspan>
-          <tspan fill="#9900ff">Chakra UI</tspan>
-          <tspan>and</tspan>
-          <tspan fill="#9900ff">Mantine</tspan>
-          <tspan>.</tspan>
-        </text>
-      </g>
       <path
         d="M618.7390656528713 1525.561746571055Q619.5416665140001 1556.8137617471511 618.7390656528713 1597.6722674967116"
         fill="none"
@@ -714,7 +618,7 @@
           font-weight="normal"
           font-size="16px"
         >
-          <tspan>Personal Recommendation / Opinion</tspan>
+          <tspan>Recommended</tspan>
         </text>
         <text
           x="211"
@@ -724,7 +628,7 @@
           font-weight="normal"
           font-size="16px"
         >
-          <tspan>I wouldn't recommend</tspan>
+          <tspan>Not Recommended</tspan>
         </text>
         <circle cx="185" cy="319" r="10" fill="rgb(153,153,153)"></circle>
         <text
@@ -755,7 +659,7 @@
           font-weight="normal"
           font-size="16px"
         >
-          <tspan>Alternative Option - Pick this or purple</tspan>
+          <tspan>Alternative - Pick this or purple</tspan>
         </text>
         <circle cx="185" cy="254" r="10" fill="rgb(255,255,255)"></circle>
         <circle cx="185" cy="254" r="10" fill="rgb(255,255,255)"></circle>
@@ -3122,9 +3026,6 @@
         font-weight="normal"
         font-size="17px"
       >
-        <tspan>and</tspan>
-        <tspan fill="#9900ff">Functional</tspan>
-        <tspan>tests and learn how to write</tspan>
       </text>
       <text
         x="789"
@@ -3134,7 +3035,6 @@
         font-weight="normal"
         font-size="17px"
       >
-        <tspan>them with the tools listed on the right.</tspan>
       </text>
       <text
         x="789"
@@ -3144,11 +3044,6 @@
         font-weight="normal"
         font-size="17px"
       >
-        <tspan>Learn the difference between</tspan>
-        <tspan fill="#9900ff">Unit</tspan>
-        <tspan>,</tspan>
-        <tspan fill="#9900ff">Integration</tspan>
-        <tspan>,</tspan>
       </text>
       <g class="clickable-group" data-group-id="116-auth-strategies">
         <rect
@@ -5243,61 +5138,6 @@
       >
         <tspan>Continue Learning with following relevant tracks</tspan>
       </text>
-      <g class="clickable-group" data-group-id="ext_link:roadmap.sh/nodejs">
-        <rect
-          x="874.35"
-          y="3319.35"
-          width="195.3"
-          height="41.3"
-          rx="2"
-          fill="rgb(255,229,153)"
-          fill-opacity="1"
-          stroke="rgb(0,0,0)"
-          stroke-width="2.7"
-        ></rect>
-        <text
-          x="903"
-          y="3346"
-          fill="rgb(0,0,0)"
-          font-style="normal"
-          font-weight="normal"
-          font-size="17px"
-        >
-          <tspan>Node.js Roadmap</tspan>
-        </text>
-      </g>
-      <g class="clickable-group" data-group-id="ext_link:roadmap.sh/typescript">
-        <rect
-          x="666.35"
-          y="3319.35"
-          width="195.3"
-          height="41.3"
-          rx="2"
-          fill="rgb(255,229,153)"
-          fill-opacity="1"
-          stroke="rgb(0,0,0)"
-          stroke-width="2.7"
-        ></rect>
-        <text
-          x="686"
-          y="3345.5"
-          fill="rgb(0,0,0)"
-          font-style="normal"
-          font-weight="normal"
-          font-size="17px"
-        >
-          <tspan>TypeScript Roadmap</tspan>
-        </text>
-      </g>
-      <path
-        d="M724 3469.090909090909Q821.8573282291053 3465.7309887785323 964.292382841147 3469.090909090909"
-        fill="none"
-        stroke="rgb(255,255,255)"
-        stroke-width="4"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-dasharray="0.8 12"
-      ></path>
     </svg>
 
     <script
