heavily modified the python roadmap

--- a/Codes/html_codes/python.html
+++ b/Codes/html_codes/python.html
@@ -1195,107 +1195,6 @@
             <tspan>Conda</tspan>
           </text>
         </g>
-        <g>
-          <rect
-            x="236.35"
-            y="154.35"
-            width="325.3"
-            height="197.3"
-            rx="2"
-            fill="rgb(255,255,255)"
-            fill-opacity="1"
-            stroke="rgb(0,0,0)"
-            stroke-width="2.7"
-          ></rect>
-          <g
-            class="clickable-group"
-            data-group-id="ext_link:roadmap.sh/backend"
-          >
-            <text
-              x="296"
-              y="250"
-              fill="rgb(0,0,0)"
-              font-style="normal"
-              font-weight="normal"
-              font-size="18px"
-            >
-              <tspan>Backend Roadmap</tspan>
-            </text>
-            <g>
-              <circle cx="273" cy="243" r="10" fill="rgb(255,255,255)"></circle>
-              <circle cx="273" cy="243" r="10" fill="rgb(153,153,153)"></circle>
-              <path
-                d="M267.5 243L271.5 247 278 240.5"
-                fill="none"
-                stroke="#fff"
-                stroke-width="3.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              ></path>
-            </g>
-          </g>
-          <g class="clickable-group" data-group-id="ext_link:roadmap.sh/devops">
-            <text
-              x="296"
-              y="285.5"
-              fill="rgb(0,0,0)"
-              font-style="normal"
-              font-weight="normal"
-              font-size="18px"
-            >
-              <tspan>DevOps Roadmap</tspan>
-            </text>
-            <g>
-              <circle cx="273" cy="279" r="10" fill="rgb(255,255,255)"></circle>
-              <circle cx="273" cy="279" r="10" fill="rgb(153,153,153)"></circle>
-              <path
-                d="M267.5 279L271.5 283 278 276.5"
-                fill="none"
-                stroke="#fff"
-                stroke-width="3.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              ></path>
-            </g>
-          </g>
-          <text
-            x="263"
-            y="206.5"
-            fill="rgb(0,0,0)"
-            font-style="normal"
-            font-weight="normal"
-            font-size="24px"
-          >
-            <tspan>Related Roadmaps</tspan>
-          </text>
-          <g
-            class="clickable-group"
-            data-group-id="ext_link:roadmap.sh/software-design-architecture"
-          >
-            <text
-              x="296"
-              y="323.5"
-              fill="rgb(0,0,0)"
-              font-style="normal"
-              font-weight="normal"
-              font-size="18px"
-            >
-              <tspan>Software Design Roadmap</tspan>
-            </text>
-            <g>
-              <circle cx="273" cy="317" r="10" fill="rgb(255,255,255)"></circle>
-              <circle cx="273" cy="317" r="10" fill="rgb(153,153,153)"></circle>
-              <path
-                d="M267.5 317L271.5 321 278 314.5"
-                fill="none"
-                stroke="#fff"
-                stroke-width="3.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              ></path>
-            </g>
-          </g>
-        </g>
         <g
           class="clickable-group"
           data-group-id="106-python-advanced-topics:list-comprehensions"
@@ -1757,56 +1656,8 @@
           font-weight="normal"
           font-size="17px"
         >
-          <tspan>
-            For ecosystem and more, check other tracks involving Python
-          </tspan>
+          <tspan>Check other tracks involving Python</tspan>
         </text>
-        <g class="clickable-group" data-group-id="ext_link:roadmap.sh/devops">
-          <rect
-            x="891.35"
-            y="1660.35"
-            width="226.3"
-            height="41.3"
-            rx="2"
-            fill="rgb(255,229,153)"
-            fill-opacity="1"
-            stroke="rgb(0,0,0)"
-            stroke-width="2.7"
-          ></rect>
-          <text
-            x="934"
-            y="1686.5"
-            fill="rgb(0,0,0)"
-            font-style="normal"
-            font-weight="normal"
-            font-size="17px"
-          >
-            <tspan>DevOps Roadmap</tspan>
-          </text>
-        </g>
-        <g class="clickable-group" data-group-id="ext_link:roadmap.sh/backend">
-          <rect
-            x="625.35"
-            y="1660.35"
-            width="249.3"
-            height="41.3"
-            rx="2"
-            fill="rgb(255,229,153)"
-            fill-opacity="1"
-            stroke="rgb(0,0,0)"
-            stroke-width="2.7"
-          ></rect>
-          <text
-            x="676"
-            y="1687"
-            fill="rgb(0,0,0)"
-            font-style="normal"
-            font-weight="normal"
-            font-size="17px"
-          >
-            <tspan>Backend Roadmap</tspan>
-          </text>
-        </g>
       </svg>
 
       <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
