--- a/Codes/html_codes/skills.html
+++ b/Codes/html_codes/skills.html
@@ -109,7 +109,7 @@
         <div class="card-body">
           <h5 class="card-title">SQL</h5>
           <p class="card-text">Domain-specific language for managing and querying relational databases.</p>
-          <a href="#" class="btn btn-primary">View Roadmap</a>
+          <a href="/Codes/html_codes/sql.html" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card"data-aos="zoom-in" style="width: 18rem;">
